# django-user-visit

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc  .pylintrc  .ruff.toml  .travis.yml  CHANGELOG  LICENSE  README.md  manage.py  mypy.ini  pyproject.toml  test.db  tox.ini
.github/workflows/: tox.yml
tests/: settings.py  test_middleware.py  test_models.py  urls.py  utils.py
user_visit/: __init__.py  admin.py  apps.py  middleware.py  models.py  settings.py
user_visit/management/commands/: update_user_visit_user_agent_data.py
user_visit/migrations/: 0001_initial.py  0002_add_created_at.py  0003_uservisit_context.py  0003_uservisit_updated_at.py  0004_add_user_agent_fields.py  0004_uservisit_browser_uservisit_device_uservisit_os.py
